// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. key facts with title 1`] = `
<div>
  <h2>
    Example title
  </h2>
  <div>
    <div />
    <span>
      Example bullet text
    </span>
  </div>
  <div>
    <div />
    <span>
      An example 
      <a
        data-testid="KeyFactTextLink"
      >
        link
      </a>
    </span>
  </div>
  <div>
    <div />
    <span>
      More example text.
    </span>
  </div>
  <div>
    <div />
    <span>
      Example text 
      <b>
        this is bold 
      </b>
      <i>
        this is in italics.
      </i>
    </span>
  </div>
</div>
`;

exports[`2. key facts without title 1`] = `
<div>
  <div>
    <div />
    <span>
      Example bullet text
    </span>
  </div>
  <div>
    <div />
    <span>
      An example 
      <a
        data-testid="KeyFactTextLink"
      >
        link
      </a>
    </span>
  </div>
  <div>
    <div />
    <span>
      More example text.
    </span>
  </div>
  <div>
    <div />
    <span>
      Example text 
      <b>
        this is bold 
      </b>
      <i>
        this is in italics.
      </i>
    </span>
  </div>
</div>
`;
